maze.island.IslandMaze.scala.error
Compilation error:
IslandMaze:32: error: ':' expected but ',' found.
  def conditionSuivreMur(dir1, dir2) {
                             ^IslandMaze:41: error: identifier expected but '}' found.
} 
^